--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -431,8 +431,8 @@
 <script>
 $('.cart__word').html($('#newCartWord').html());
 $('.cartSumNow').html($('#newCartSum').html());
-$('.cart__count').html($('#newCartCount').html());
-$('.cart__count').attr('data-count', $('#newCartCount').html());
+$('.count-cart').html($('#newCartCount').html());
+$('.count-cart').attr('data-count', $('#newCartCount').html());
 $('.addto__cart').html($('#newCartData').html());
 </script>
 <!-- end Блок для обновления данных корзины. Не виден пользователю -->
