--- a/files/goods.htm
+++ b/files/goods.htm
@@ -307,7 +307,7 @@
 					<!-- Добавление товара в Корзину -->
 					<div class="productView__addto flex">
 						<!-- Добавление товара в корзину -->
-						<button type="submit" class="button-primary button add-cart" title="Положить &laquo;{GOODS_NAME}&raquo; в корзину">
+						<button type="submit" class="button add-cart" title="Положить &laquo;{GOODS_NAME}&raquo; в корзину">
 							<i class="icon-cart"></i>
 							<span>Купить</span>
 						</button>
