--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -358,7 +358,7 @@
 				<!-- Корзина: Оформление -->
 				<div class="total__buttons flex">
 					<a class="button button5 closeOrder" title="Отменить заказ"><span>Изменить </span><span>заказ</span></a>
-					<a id="makeOrder" class="button-primary button disabled" title="Перейти к быстрому оформлению заказа"><span>Оформить </span><span>заказ</span></a>
+					<a id="makeOrder" class="button disabled" title="Перейти к быстрому оформлению заказа"><span>Оформить </span><span>заказ</span></a>
 					<div class="total__pp">
 						<span>Нажимая на кнопку &laquo;Оформить заказ&raquo;, Вы соглашаетесь</span>
 						<a data-fancybox data-src="#fancybox__pp" href="javascript:;">с правилами обработки данных</a>
