--- a/files/cart_ajax_add.htm
+++ b/files/cart_ajax_add.htm
@@ -1,35 +1,31 @@
-{% IF FORM_NOTICE_IS_GOOD %}
-<div class="noty__body 1-{GOODS_MOD_ID} 2-{GOODS_ID} 3-{GOODS_FROM}">
-	{% FOR cart_items %}
-		{% IF cart_items.GOODS_MOD_ID = FORM_GOODS_MOD_ID %}
-			<div class="noty__addto flex" data-id="{cart_items.GOODS_ID}">
-				<div class="noty__content">
-					<a class="noty__title flex" href="{CART_URL}">
-						<i class="icon-cart"></i><span>Добавлено в корзину</span>
-					</a>
-					<a class="noty__message" href="{cart_items.GOODS_URL}" title="{cart_items.GOODS_NAME}">{cart_items.GOODS_NAME}</a>
-					<div class="noty__price price__now {CURRENCY_CHAR_CODE}">{cart_items.GOODS_MOD_PRICE_NOW | money_format}</div>
-				</div>
-				<div class="noty__image flex-center">
-					<img src="{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{cart_items.GOODS_IMAGE_MEDIUM}{% ENDIF %}" />
-				</div>
-			</div>
-		{% ELSEIF cart_items.GOODS_ID = FORM_GOODS_ID %}		
-			<div class="noty__addto">
-				<a class="noty__title flex-center" href="{CART_URL}"><span>Добавлено в корзину</span></a>
-				<div class="noty__message"><span>{FORM_NOTICE | nl2br}</span></div>
-			</div>
+<div class="noty__body">
+	<div class="noty__cart">
+		{% IF FORM_NOTICE_IS_GOOD %}
+			{% FOR cart_items %}
+				{% IF cart_items.GOODS_MOD_ID = FORM_GOODS_MOD_ID %}
+					<div class="noty__addto flex" data-id="{cart_items.GOODS_ID}">
+						<div class="noty__image flex-center">
+							<img src="{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{cart_items.GOODS_IMAGE_MEDIUM}{% ENDIF %}" />
+						</div>
+						<div class="noty__message">{FORM_NOTICE}</div>
+						<div class="noty__cart-icons">
+							<a class="noty__cart-icon" href="{CART_URL}" title="Корзина">
+								<div class="noty__cart-count">
+									<span class="count-cart" data-count="{CART_COUNT_TOTAL}">{CART_COUNT_TOTAL}</span>
+								</div>
+								<i class="icon-cart"></i>
+							</a>
+						</div>
+					</div>
+				{% ENDIF %}
+			{% ENDFOR %}
+		{% ELSE %}
+		<div class="noty__addto flex">
+			<div class="noty__message"><span>{FORM_NOTICE | nl2br}</span></div>
+		</div>
 		{% ENDIF %}
-	{% ENDFOR %}
-</div>
-{% ELSE %}
-<div class="noty__body 2">
-	<div class="noty__addto">
-		<a class="noty__title flex-center" href="{CART_URL}"><span>Не удалось</span></a>
-		<div class="noty__message"><span>Товар не был добавлен в корзину в связи с отсутствием</span></div>
 	</div>
 </div>
-{% ENDIF %}
 
 <!-- Блок для обновления данных корзины. Не виден пользователю -->
 <div style="display:none;" id="newCartWord">
